[package]
name = "lmbr_sys"
version = "0.1.0"
authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
edition = "2018"

description = "FFI bindings to Amazon Lumberyard (unofficial)"
repository = "https://github.com/jeikabu/lmbr"
keywords = ["lmbr", "lumberyard"]
categories = ["game-engines", "external-ffi-bindings"]
license = "MIT"

[dependencies]

[build-dependencies]
bindgen = "0.51"
lmbr_build = {version = "0.1", path = "../lmbr_build"}

[features]
default = [ "lmbr_editor", "lmbr_fw_azcore"]
lmbr_fw_azcore = []
lmbr_editor = []
